Unalias type after delayed type resolution befor baseClass import.

This fixes a bug where semantic analsis failed for typedefed template
arguments in base classes.

BUG: 270973